Small fix to modal overlay displaying behind flashcard nav

--- a/src/components/Modals/modal.scss
+++ b/src/components/Modals/modal.scss
@@ -6,7 +6,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 15;
+  z-index: 30;
   text-align: center;
   background-color: var(--white);
   padding: 4.8rem 2.4rem;
