--- a/src/sass/components/_components.scss
+++ b/src/sass/components/_components.scss
@@ -86,5 +86,5 @@
   left: 0;
   background-color: rgba(0, 0, 0, 0.32);
   backdrop-filter: blur(5px);
-  z-index: 10;
+  z-index: 20;
 }
